# improved-octo-spoon

./: Cargo.toml  INFO.md  README.md  build_native.sh  build_wasm.sh
.cargo/: config.toml
.github/workflows/: build.yml
bsx/: Cargo.toml
bsx/src/: asset.rs  audio.rs  codec.rs  ffi.rs  format.rs  fx.rs  lib.rs  main.rs  mesh.rs  strings.rs  stripped_lz4.rs  stripped_zstd.rs  util.rs  wasm.rs
godot/: USAGE.md
godot/addons/bsx/: BSXBundle.gd  BSXNative.gdextension  BSXPlugin.gd  plugin.cfg
