[workspace]
resolver = "2"
members = ["bsx"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-size]
inherits = "release"
opt-level = "z"
lto = "fat"

[profile.release.package."*"]
opt-level = 3

[profile.release.package.lz4_flex]
opt-level = 3
codegen-units = 1

[profile.release.package.crc32fast]
opt-level = 3
