[package]
name    = "bsx"
version = "2.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# ─────────────────────────────────────────────────────────────
# FEATURES (простая и стабильная модель)
# ─────────────────────────────────────────────────────────────
[features]
default = ["native"]

# desktop / full runtime
native = [
    "dep:zstd",
    "dep:rayon",
    "dep:opus",
    "dep:symphonia",
    "dep:walkdir",
    "dep:clap",
    "dep:colored",
    "dep:indicatif",
    "dep:rand",
    "dep:memmap2",
    "dep:dashmap",
]

# android = урезанный, без system C-deps сюрпризов
android = [
    "dep:zstd",
    "dep:rayon",
    "dep:rand",
]

# ─────────────────────────────────────────────────────────────
# CORE DEPENDENCIES (always-on, pure Rust preferred)
# ─────────────────────────────────────────────────────────────
[dependencies]
anyhow    = { version = "1", features = ["std"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"
postcard  = { version = "1", features = ["alloc"] }
crc32fast = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
meshopt   = "0.3"

lz4_flex  = { version = "0.11", default-features = false, features = ["frame"] }
ogg       = "0.9"
qoi       = "0.4"
png       = "0.17"

image = { version = "0.25", default-features = false, features = [
    "webp",
    "png",
] }

# ─────────────────────────────────────────────────────────────
# HEAVY / OPTIONAL (ONLY FOR native + android feature gates)
# ─────────────────────────────────────────────────────────────
zstd = { version = "0.13", optional = true, default-features = false, features = ["zstdmt"] }
rayon = { version = "1", optional = true }
dashmap = { version = "6", optional = true }
opus = { version = "0.3", optional = true }
symphonia = { version = "0.5", optional = true, features = ["all"] }
walkdir = { version = "2", optional = true }
clap = { version = "4", optional = true, features = ["derive"] }
colored = { version = "2", optional = true }
indicatif = { version = "0.17", optional = true }
rand = { version = "0.9", optional = true }
memmap2 = { version = "0.9", optional = true }

# ─────────────────────────────────────────────────────────────
# WASM / BINDINGS (NOT USED IN YOUR CI RIGHT NOW)
# ─────────────────────────────────────────────────────────────
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }

serde-wasm-bindgen = { version = "0.6", optional = true }

# ─────────────────────────────────────────────────────────────
# IMPORTANT: NO zstd-sys DIRECT CONTROL HERE
# (let zstd crate manage backend safely)
# ─────────────────────────────────────────────────────────────
